# platform-adapters

./: IMPLEMENTATION_EXECUTION_PLAN.md  LICENSE  README.md  platform-adapters-repository-scaffolding.md  pyproject.toml
adapter_registry/: adapter_registry.py  capability_publisher.py  registry_loader.py
ci_cd/: adapter_tests.yaml  compatibility_tests.yaml  integration_tests.yaml
cloud/aws/: capability_manifest.yaml
cloud/azure/: capability_manifest.yaml
cloud/onprem/: capability_manifest.yaml
configs/: adapter_registry.yaml  aws_config.yaml  gcp_config.yaml  observability_config.yaml
data/: capability_manifest.yaml
data/feature_store/: feature_registry_adapter.py
data/warehouses/: bigquery_adapter.py  redshift_adapter.py  snowflake_adapter.py
docs/: adapter_architecture.md  adapter_capability_model.md  writing_adapters.md
examples/: aws_stack_example.yaml  ml_training_example.yaml  realtime_inference_example.yaml
lifecycle/: adapter_health_check.py  adapter_loader.py  adapter_validator.py
ml/: capability_manifest.yaml
ml/inference/: batch_inference_adapter.py
ml/training/: pytorch_adapter.py  ray_training_adapter.py
observability/logging/: structured_logger.py
observability/telemetry/: otel_adapter.py
src/platform_adapters/: __init__.py  contracts.py  errors.py
tests/: test_package_structure.py
tests/cloud/: test_dynamodb_registry.py  test_eks_adapter.py  test_s3_store.py
tests/data/: test_kafka_adapter.py  test_parquet_dataset.py  test_snowflake_adapter.py
tests/integration/: test_adapter_registry.py  (+1 more)
(+74 files in other folders)
